nodave.h


/*
    Copy an internal String into an external string buffer. This is needed to interface
    with Visual Basic. Maybe it is helpful elsewhere, too.
*/
EXPORTSPEC void DECL2 daveStringCopy(char * intString, char * extString); // args are char because this is usual for strings

/* 
    This is a wrapper for the serial or ethernet interface. This is here to make porting easier.
*/

typedef struct _daveConnection  daveConnection;


/*
    Helper struct to manage PDUs. This is NOT the part of the packet I would call PDU, but
    a set of pointers that ease access to the "private parts" of a PDU.
*/
typedef struct {
    uc * header;	/* pointer to start of PDU (PDU header) */
    uc * param;		/* pointer to start of parameters inside PDU */
    uc * data;		/* pointer to start of data inside PDU */
    uc * udata;		/* pointer to start of data inside PDU */
    int hlen;		/* header length */
    int plen;		/* parameter length */
    int dlen;		/* data length */
    int udlen;		/* user or result data length */
} PDU;


typedef struct {
    unsigned short number;
    uc type[2];
} daveBlockEntry;


/*
    names for PLC objects:
*/
EXPORTSPEC char * DECL2 daveBlockName(uc bn);  // char or uc,to decide
EXPORTSPEC char * DECL2 daveAreaName(uc n); // to decide

/*
    swap functions. These swap function do a swao on little endian machines only:
*/
EXPORTSPEC short DECL2 daveSwapIed_16(short ff);

EXPORTSPEC int DECL2 daveSwapIed_32(int ff);



EXPORTSPEC float DECL2 toPLCfloat(float ff);

EXPORTSPEC int DECL2 daveToPLCfloat(float ff);

EXPORTSPEC int DECL2 daveListBlocksOfType(daveConnection * dc,uc type,daveBlockEntry * buf);


typedef struct {
    int numResults;
    daveResult * results;
} daveResultSet;

/* Adds a new variable to a prepared request: */
EXPORTSPEC void DECL2 daveAddVarToReadRequest(PDU *p, int area, int DBnum, int start, int bytes);

/* Frees the memory occupied by the result structure */
EXPORTSPEC void DECL2 daveFreeResults(daveResultSet * rl);

/* Adds a new bit variable to a prepared request: */
EXPORTSPEC void DECL2 daveAddBitVarToReadRequest(PDU *p, int area, int DBnum, int start, int byteCount);

/* Adds a new variable to a prepared request: */
EXPORTSPEC void DECL2 daveAddVarToWriteRequest(PDU *p, int area, int DBnum, int start, int bytes, void * buffer);

/* Adds a new bit variable to a prepared write request: */
EXPORTSPEC void DECL2 daveAddBitVarToWriteRequest(PDU *p, int area, int DBnum, int start, int byteCount, void * buffer);

EXPORTSPEC daveResultSet * DECL2 daveNewResultSet();

EXPORTSPEC void DECL2 daveFree(void * dc);

EXPORTSPEC PDU * DECL2 daveNewPDU();

EXPORTSPEC int DECL2 daveGetErrorOfResult(daveResultSet *,int number);

/*
    Program Block from PLC:
*/
EXPORTSPEC int DECL2 daveGetProgramBlock(daveConnection * dc, int blockType, int number, char* buffer, int * length);