openS7online.h

//EXPORTSPEC HANDLE DECL2 openS7online(const char * accessPoint);
EXPORTSPEC HANDLE DECL2 openS7online(const char * accessPoint, HWND handle);
EXPORTSPEC HANDLE DECL2 closeS7online(int h);