Dot.NET/libnodave.net.cs

	
	[DllImport("libnodave.dll")]
	protected static extern int daveGetProgramBlock(IntPtr dc, int blockType, int number, byte[] buffer, ref int length);
	public int getProgramBlock(int blockType, int number, byte[] buffer, ref int length) {
	    Console.WriteLine("length:"+length);
	    int a=daveGetProgramBlock(pointer, blockType, number, buffer, ref length);
	    Console.WriteLine("length:"+length);
	    return a;
	}
	
	[DllImport("libnodave.dll")]
	protected static extern int daveListBlocksOfType(IntPtr dc, int blockType, byte[] buffer);
	public int ListBlocksOfType(int blockType, byte[] buffer) {
	    return daveListBlocksOfType(pointer, blockType, buffer);
//	    return -1;
	}

    }

    public class PDU:pseudoPointer {
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern IntPtr daveNewPDU();

	public PDU() {
	    pointer=daveNewPDU();
	}

/*	~PDU(){
	    Console.WriteLine("~PDU()");
	    daveFree(pointer);
	}
*/
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern void daveAddVarToReadRequest(IntPtr p, int area, int DBnum, int start, int bytes);
	public void addVarToReadRequest(int area, int DBnum, int start, int bytes) {
	    daveAddVarToReadRequest(pointer, area, DBnum, start, bytes);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern void daveAddBitVarToReadRequest(IntPtr p, int area, int DBnum, int start, int bytes);
	public void addBitVarToReadRequest(int area, int DBnum, int start, int bytes) {
	    daveAddBitVarToReadRequest(pointer, area, DBnum, start, bytes);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern void daveAddVarToWriteRequest(IntPtr p, int area, int DBnum, int start, int bytes, byte[] buffer);
	public void addVarToWriteRequest(int area, int DBnum, int start, int bytes, byte[] buffer) {
	    daveAddVarToWriteRequest(pointer, area, DBnum, start, bytes, buffer);
	}
    
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern void daveAddBitVarToWriteRequest(IntPtr p, int area, int DBnum, int start, int bytes, byte[] buffer);
	public void addBitVarToWriteRequest(int area, int DBnum, int start, int bytes, byte[] buffer) {
	    daveAddBitVarToWriteRequest(pointer, area, DBnum, start, bytes, buffer);
	}
	
    } // class PDU

    public class resultSet:pseudoPointer {
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern IntPtr daveNewResultSet();
	public resultSet() {
	    pointer=daveNewResultSet();
	}

	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
        protected static extern void daveFreeResults(IntPtr rs);
	~resultSet(){
//	    Console.WriteLine("~resultSet(1)");
	    daveFreeResults(pointer);
//	    Console.WriteLine("~resultSet(2)");
//	    daveFree(pointer);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveGetErrorOfResult(IntPtr rs, int number);
	public int getErrorOfResult(int number) {
	    return daveGetErrorOfResult(pointer, number);
	}	
    
    }

    [DllImport("libnodave.dll"/*, PreserveSig=false */ )]
    public static extern int setPort(
	[MarshalAs(UnmanagedType.LPStr)] string portName,
	[MarshalAs(UnmanagedType.LPStr)] string baud,
	int parity
    );
    
    [DllImport("libnodave.dll" /*, PreserveSig=false */ )]
    public static extern int openSocket(
	int port,
	[MarshalAs(UnmanagedType.LPStr)] string portName
    );

    [DllImport("libnodave.dll" /*, PreserveSig=false */ )]
    public static extern int openS7online(
	[MarshalAs(UnmanagedType.LPStr)] string portName
    );

    [DllImport("libnodave.dll" /*, PreserveSig=false */ )]
    public static extern int closePort(
	int port
    );
    
    [DllImport("libnodave.dll" /*, PreserveSig=false */ )]
    public static extern int closeSocket(
	int port
    );

    [DllImport("libnodave.dll" )]
    public static extern int closeS7online(
	int port
    );

        
        
    [DllImport("libnodave.dll"/*, PreserveSig=false */ )]
    public static extern float toPLCfloat(float f);
    
    [DllImport("libnodave.dll"/*, PreserveSig=false */ )]
    public static extern int daveToPLCfloat(float f);
    
    [DllImport("libnodave.dll"/*, PreserveSig=false */ )]
    public static extern int daveSwapIed_32(int i);
    
    [DllImport("libnodave.dll"/*, PreserveSig=false */ )]
    public static extern int daveSwapIed_16(int i);

    public static int getS16from(byte[] b, int pos) {
	if (BitConverter.IsLittleEndian) {
	    byte[] b1=new byte[2];
	    b1[1]=b[pos+0];
	    b1[0]=b[pos+1];
	    return BitConverter.ToInt16(b1, 0);
	}    
	else 
	    return BitConverter.ToInt16(b, pos);
    }
    
    public static int getU16from(byte[] b, int pos) {
	if (BitConverter.IsLittleEndian) {
	    byte[] b1=new byte[2];
	    b1[1]=b[pos+0];
	    b1[0]=b[pos+1];
	    return BitConverter.ToUInt16(b1, 0);
	}    
	else 
	    return BitConverter.ToUInt16(b, pos);
    }
        
    public static int getS32from(byte[] b, int pos) {
	if (BitConverter.IsLittleEndian) {
	    byte[] b1=new byte[4];
	    b1[3]=b[pos];
	    b1[2]=b[pos+1];
	    b1[1]=b[pos+2];
	    b1[0]=b[pos+3];
	    return BitConverter.ToInt32(b1, 0);
	}    
	else 
	    return BitConverter.ToInt32(b, pos);
    }
    
    public static uint getU32from(byte[] b, int pos) {
	if (BitConverter.IsLittleEndian) {
	    byte[] b1=new byte[4];
	    b1[3]=b[pos];
	    b1[2]=b[pos+1];
	    b1[1]=b[pos+2];
	    b1[0]=b[pos+3];
	    return BitConverter.ToUInt32(b1, 0);
	}    
	else 
	    return BitConverter.ToUInt32(b, pos);
    }
    
    public static float getFloatfrom(byte[] b, int pos) {
	if (BitConverter.IsLittleEndian) {
	    byte[] b1=new byte[4];
	    b1[3]=b[pos];
	    b1[2]=b[pos+1];
	    b1[1]=b[pos+2];
	    b1[0]=b[pos+3];
	    return BitConverter.ToSingle(b1, 0);
	}    
	else 
	    return BitConverter.ToSingle(b, pos);
    }
    
    
    [DllImport("libnodave.dll"/*, PreserveSig=false */ )]
    private static extern int daveAreaName(int area);
    
    [DllImport("libnodave.dll")]
    private static extern int daveBlockName(int blockType);
    [DllImport("libnodave.dll")]
    private static extern void daveStringCopy(int i, byte[] c);
    
    public static string blockName(int blockType) {
	byte[] s=new byte[255];
	int i=daveBlockName(blockType);
	daveStringCopy(i, s);
	string st="";
	i=0;
	while (s[i]!=0) {
	    st=st+(char)s[i];
	    i++;
	}
	return st;
    }
    
    public static string areaName(int blockType) {
	byte[] s=new byte[255];
	int i=daveAreaName(blockType);
	daveStringCopy(i, s);
	string st="";
	i=0;
	while (s[i]!=0) {
	    st=st+(char)s[i];
	    i++;
	}
	return st;
    }
    
}

/* Changes:
    03/30/2006	bug fix: removed double calls to daveFree in nested destructors.
    11/21/2006	bug fix: applied patches from Johann Gail.
Version 0.8.4.5    
    07/10/09  	Added closeSocket()
*/    